adaptive menu and hero

--- a/index.html
+++ b/index.html
@@ -17,21 +17,28 @@
 	<!-- header -->
 
 	<header class="header">
-		<a href="#home" class="header__logo">
-			<svg>
-				<use xlink:href='#logo'></use>
-			</svg>
-		</a>
-		<nav>
-			<ul class="header__menu">
-				<li class="header__menu--item"><a href="#home" class="header__menu--link">Home</a></li>
-				<li class="header__menu--item"><a href="#about" class="header__menu--link">About Us</a></li>
-				<li class="header__menu--item"><a href="#services" class="header__menu--link">Services</a></li>
-				<li class="header__menu--item"><a href="#portfolio" class="header__menu--link">Portfolio</a></li>
-				<li class="header__menu--item"><a href="#blog" class="header__menu--link">Blog</a></li>
-				<li class="header__menu--item"><a href="#contact" class="header__menu--link">Contact</a></li>
-			</ul>
-		</nav>
+			<a href="#home" class="header__logo">
+				<svg>
+					<use xlink:href='#logo'></use>
+				</svg>
+			</a>
+
+			<button class="mobile-toggle">
+				<span></span>
+				<span></span>
+				<span></span>
+			</button>
+
+			<nav>
+				<ul class="header__menu">
+					<li class="header__menu--item"><a href="#home" class="header__menu--link">Home</a></li>
+					<li class="header__menu--item"><a href="#about" class="header__menu--link">About Us</a></li>
+					<li class="header__menu--item"><a href="#services" class="header__menu--link">Services</a></li>
+					<li class="header__menu--item"><a href="#portfolio" class="header__menu--link">Portfolio</a></li>
+					<li class="header__menu--item"><a href="#blog" class="header__menu--link">Blog</a></li>
+					<li class="header__menu--item"><a href="#contact" class="header__menu--link">Contact</a></li>
+				</ul>
+			</nav>
 	</header>
 
 	<main>
@@ -45,14 +52,14 @@
 					<p class="hero__text">Free creative PSD template for you</p>
 					<a href="#about" class="hero__link">Read more</a>
 				</div>
-				<div class="hero__scroll">
+				<!-- <div class="hero__scroll">
 					<a href="#about">
 						<svg>
 							<use xlink:href='#scroll'></use>
 						</svg>
 					</a>
 					<p class="hero__scroll--text">Scroll down</p>
-				</div>
+				</div> -->
 				<div class="hero__social">
 					<a href="https://www.facebook.com/profile.php?id=100001880284625" class="hero__social--link" target="_blank">
 						<svg class="hero__social--icon icon-fb">
