--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" href="style/slick.css">
 	<link rel="stylesheet" href="style/slick-theme.css">
 	<link rel="stylesheet" href="style/app.css">
-	<link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
-	<link rel="shortcut icon" href="" type="image/png">
+	<link rel="shortcut icon" href="img/favicon.png" type="image/png">
 	<title>Vanzer</title>
 </head>
 <body>
@@ -89,7 +89,7 @@
 		<!-- about us -->
 		
 		<section class="about" id='about'>
-			<div class="container">
+			<div class="container flex-container">
 				<div class="cover-text cover-text--top">a</div>
 				<h2 class="about__title"><span class='about__title--highlight'>Creative </span>studio</h2>
 				<div class="about__block">
