--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 				<div class="about__block">
 					<div class="about__pictures">
 						<div class="about__pictures--frame about__pictures--top">
-							<img src="img/about-1.jpg" alt="Man with laptop" class="about__pictures--img">
+							<img src="img/joshua-coleman-JfHRmaUP0z8-unsplash.jpg" alt="Man with laptop" class="about__pictures--img">
 						</div>
 						<div class="about__pictures--frame about__pictures--bottom">
-							<img src="img/about-2.jpg" alt="Cup of coffee" class="about__pictures--img">
+							<img src="img/skye-studios-NDLLFxTELrU-unsplash.jpg" alt="Cup of coffee" class="about__pictures--img">
 						</div>
 					</div>
 					<div class="about__text">
